<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_provinsi"
        style="@style/TextSM.Medium.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/provinsi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutProvinsi"
        style="@style/TextInputLayout.DropDown"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_provinsi">

        <AutoCompleteTextView
            android:id="@+id/edt_provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pilih_provinsi" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_kota_kabupaten"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/kota_kabupaten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProvinsi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_kota_kabupaten"
        style="@style/TextInputLayout.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kota_kabupaten">

        <AutoCompleteTextView
            android:id="@+id/edt_kota_kabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pilih_kota_kabupaten" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_kecamatan"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/kecamatan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_kota_kabupaten" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_kecamatan"
        style="@style/TextInputLayout.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kecamatan">

        <AutoCompleteTextView
            android:id="@+id/edt_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pilih_kecamatan" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_kelurahan"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/kelurahan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_kecamatan" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_kelurahan"
        style="@style/TextInputLayout.DropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kelurahan">

        <AutoCompleteTextView
            android:id="@+id/edt_kelurahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pilih_kelurahan" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_rt"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/rt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_kelurahan" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_rt"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_rt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/pilih_rt" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_rw"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/rw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_rt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_rw"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rw">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_rw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/pilih_rw" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_rt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_rt,textInputLayout_rt"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_rw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_rw,textInputLayout_rw"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tv_alamat"
        style="@style/TextSM.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_medium"
        android:layout_marginTop="@dimen/base_margin_large_20"
        android:text="@string/alamat_lengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_rw" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_alamat_lengkap"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/base_margin_small"
        android:layout_marginBottom="@dimen/base_margin_large_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alamat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_alamat"
            style="@style/TextInputEditText.MultiLineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="250"
            android:ems="10"
            android:hint="@string/masukan_alamat_lengkap"
            android:lines="3" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>