<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/base_padding_large"
        android:paddingBottom="@dimen/base_margin_xlarge_40"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_1"
                style="@style/TextSM.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/nik"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_2"
                style="@style/TextSM.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_mini"
                android:text="@string/bullet"
                android:textColor="@color/error_500"
                app:layout_constraintBottom_toBottomOf="@+id/tv_1"
                app:layout_constraintStart_toEndOf="@+id/tv_1"
                app:layout_constraintTop_toTopOf="@+id/tv_1" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL_NIK"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_NIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/masukan_nik"
                android:inputType="number"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_3"
            style="@style/TextSM.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/nama_lengkap_sesuai_ktp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIL_NIK"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL_nama_lengkap"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/masukan_nama_lengkap_sesuai_ktp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_4"
            style="@style/TextSM.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/tanggal_lahir_pasangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIL_nama_lengkap"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL_tanggal_lahir_pasangan"
            style="@style/TextInputLayout.Calendar"
            android:layout_marginTop="@dimen/base_margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tanggal_lahir_pasangan"
                style="@style/TextInputEditText.Calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pilih_tanggal_lahir_pasangan" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_5"
            style="@style/TextSM.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/tempat_lahir_pasangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIL_tanggal_lahir_pasangan"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL_tempat_lahir_pasangan"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tempat_lahir_pasangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/masukan_tempat_lahir_pasangan" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_6"
            style="@style/TextSM.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/ktp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIL_tempat_lahir_pasangan" />

        <include
            android:id="@+id/cv_ktp"
            layout="@layout/fragment_upload_file" />
    </LinearLayout>
</ScrollView>